--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
         <div class="logo">
             <h1>Moncker App</h1>
         </div>
+        <div class="loginBox">
+            <div class="signIn">
+            </div>
+            <div class="signUp">
+            </div>
+        </div>
     </div>
 </body>
 </html>
